# qgroundcontrol

./: .gitignore  CMakeLists.txt  README.md  qgcresources.qrc  qgroundcontrol.qrc  rtsp-server.sh
2/translations/: qgc_fa_IR.ts
android/: AndroidManifest.xml  build.gradle  gradle.properties
cmake/platform/: Android.cmake
cmake/presets/: Android.json
custom/: CMakeLists.txt  custom.qrc
custom/cmake/: CustomOverrides.cmake
custom/qml/: MainView.qml
custom/qml/HUD/: Compass.qml  QVIOIndicator.qml  ReversedAttitudeWidget.qml  ToFSensor.qml
custom/qml/Video/: VideoMain.qml  VideoPiP.qml
custom/src/: CustomPlugin.cc  CustomPlugin.h  CustomQGCApplication.cc  CustomQGCApplication.h  QVIOHandler.cc  QVIOHandler.h  ToFHandler.cc  ToFHandler.h
custom/src/Video/: VideoHandler.cc  VideoHandler.h
deploy/: qgroundcontrol-start.sh
deploy/docker/: Dockerfile-build-android
docs/: repo_layout.md
src/: CMakeLists.txt  QGCApplication.cc  QGCApplication.h
src/AnalyzeView/: MAVLinkInspectorController.cc  MAVLinkInspectorController.h  MAVLinkMessage.cc  MAVLinkMessage.h
src/Camera/: VehicleCameraControl.cc
src/FlightDisplay/: FlightDisplayViewGStreamer.qml  FlyViewSecondaryVideo.qml
src/GPS/: GPSProvider.cc
src/Joystick/: Joystick.cc  JoystickAndroid.cc
src/MAVLink/: CMakeLists.txt  MAVLinkLib.h
src/QmlControls/: FlyViewToolBar.qml  LabelledButton.qml  QGCButton.qml  QGCDelayButton.qml  QGCPopupDialog.qml  RCChannelMonitorController.cc  RCChannelMonitorController.h  ScreenTools.qml  ScreenToolsController.cc  SettingsButton.qml
src/QtLocationPlugin/: CMakeLists.txt
src/Settings/: App.SettingsGroup.json  AppSettings.cc  AutoConnect.SettingsGroup.json
src/UI/: AppSettings.qml  MainRootWindow.qml  MainWindow.qml  (+1 more)
tools/: voxl-gcs-launch.sh
(+87 files in other folders)
